spin&move animation

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>animation</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <img class="logo" src="images/1.svg" alt="logo" />
     <h1>
       <span>H</span>
       <span>E</span>
